# vscode-theme

./: .gitignore  Cargo.toml  colorRegistry.ts
crates/codegen/: Cargo.toml  theme-color.md
crates/codegen/src/: main.rs
crates/vscode_theme/: Cargo.toml  README.md
crates/vscode_theme/src/: lib.rs  serde.rs
